	`ylim' from the first series only.

    o	plot.acf() has a new `xpd = par("xpd")' argument which by default
	*does* clipping (of the horizontal lines) as desired (xpd = NA was
	used before, erronously in most cases).

    o	predict(smooth.spline(.), deriv = 1) now works.

    o	identify() failed when x is a structure/matrix. (PR#1238)

    o	getMethod returns NULL when optional=TRUE as promised in the
	documentation.

    o	setMethod allows "..." to be one of the arguments omitted in
	the method definition (but so far no check for ... being missing)

    o	Allow round() to work again on very large numbers (introduced
	in fixing PR#1138). (PR#1254)

    o	Rinternals.h is now accepted by a C++ compiler.

    o	type.convert() was failing to detect integer overflow.

    o	piechart() was defaulting to foreground colour (black) fills
	rather than background (as used in 1.3.1 and earlier).	Now
	background is used, but be aware that as from 1.4.0 this may
	be transparent.

    o	La.eigen(*, only.values=TRUE) does not segfault anymore in one
	branch (PR#1262).

    o	cut() now produces correct default labels even when
	include.lowest = TRUE (PR#1263).

    o	reformulate() works properly with a response.

    o	cmdscale(*, k = 1) now works properly.

    o	Options by = "month" and "year" to seq.POSIXt() will always
	take account of changes to/from daylight savings time: this
	was not working on some platforms.

    o	glm.fit.null() now accepts all the arguments of glm.fit() (it
	could be called from glm.fit with arguments it did not
	accept), and is now documented.

    o	cov.wt(cbind(1), cor = TRUE) now works.

    o	predict(glm.object, se.fit = TRUE) was failing if the fit
	involved an offset.

    o	detach() on package:base would crash R. (PR#1271)



		CHANGES IN R VERSION 1.4.0


USER-VISIBLE CHANGES

    [This is a new section to highlight changes in behaviour, which
    may be given in more detail in the following sections.